<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context=".ui.main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/app_margin_normal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/main_text_lesson_1"
            style="@style/themeLabelNormal"
            android:text="@string/title_lesson_1" />

        <Button
            android:id="@+id/main_btn_lesson_1_1"
            style="@style/themeButtonNormal"
            android:text="@string/title_chapter_1_1" />

        <Button
            android:id="@+id/main_btn_lesson_1_2A"
            style="@style/themeButtonNormal"
            android:text="@string/title_chapter_1_2_A" />

        <Button
            android:id="@+id/main_btn_lesson_1_2B"
            style="@style/themeButtonNormal"
            android:text="@string/title_chapter_1_2_B" />

        <Button
            android:id="@+id/main_btn_lesson_1_3"
            style="@style/themeButtonNormal"
            android:text="@string/title_chapter_1_3" />

        <Button
            android:id="@+id/main_btn_lesson_1_4"
            style="@style/themeButtonNormal"
            android:text="@string/title_chapter_1_4" />

        <TextView
            android:id="@+id/main_text_lesson_2"
            style="@style/themeLabelNormal"
            android:text="@string/title_lesson_2" />

        <Button
            android:id="@+id/main_btn_lesson_2_1"
            style="@style/themeButtonNormal"
            android:text="@string/title_chapter_2_1" />

        <Button
            android:id="@+id/main_btn_lesson_2_2"
            style="@style/themeButtonNormal"
            android:text="@string/title_chapter_2_2" />

        <Button
            android:id="@+id/main_btn_lesson_2_3"
            style="@style/themeButtonNormal"
            android:text="@string/title_chapter_2_3" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>