<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.chapter21.ChallengeMainActivity21">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/challenge_21_button_main_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/chapter_21_margin_normal"
            android:text="@string/chapter_21_button_main_one" />

        <Button
            android:id="@+id/challenge_21_button_main_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/chapter_21_margin_normal"
            android:text="@string/chapter_21_button_main_two" />

        <Button
            android:id="@+id/challenge_21_button_main_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/chapter_21_margin_normal"
            android:text="@string/chapter_21_button_main_three" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>