<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/chapter_13_padding_regular"
    tools:context=".ui.chapter13.HomeworkActivity13">

    <TextView
        android:id="@+id/homework_13_article_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_primary"
        android:padding="@dimen/chapter_13_padding_regular"
        android:text="@string/chapter_13_article_title"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/homework_13_article_heading">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/chapter_13_subheading_width"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/homework_13_article_subheading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/chapter_13_padding_regular"
                    android:text="@string/chapter_13_article_subtitle"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/homework_13_article"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:lineSpacingExtra="@dimen/chapter_13_line_spacing"
                    android:padding="@dimen/chapter_13_padding_regular"
                    android:text="@string/chapter_13_article_text" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:padding="@dimen/chapter_13_padding_regular"
                    android:text="@string/chapter_13_add_comment" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>