<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.chapter21.HomeworkMainActivity21">

    <Button
        android:id="@+id/homework_21_button_say"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/chapter_21_margin_low"
        android:layout_marginTop="@dimen/chapter_21_margin_low"
        android:layout_marginEnd="@dimen/chapter_21_margin_low"
        android:text="@string/chapter_21_button_label_say"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/homework_21_button_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/chapter_21_margin_low"
        android:layout_marginEnd="@dimen/chapter_21_margin_low"
        android:layout_marginBottom="@dimen/chapter_21_margin_low"
        android:text="@string/chapter_21_button_label_count"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/homework_21_show_count"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/chapter_21_margin_low"
        android:layout_marginTop="@dimen/chapter_21_margin_low"
        android:layout_marginEnd="@dimen/chapter_21_margin_low"
        android:layout_marginBottom="@dimen/chapter_21_margin_low"
        android:background="@color/color_yellow"
        android:gravity="center"
        android:text="@string/chapter_21_count_initial_value"
        android:textColor="@color/color_primary"
        android:textSize="@dimen/chapter_21_text_size_big"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/homework_21_button_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homework_21_button_say" />

</androidx.constraintlayout.widget.ConstraintLayout>